reports/define-function.err.log
Traceback (most recent call last):
  File "D:\ProgramData\anaconda3\Lib\site-packages\jupyter_cache\executors\utils.py", line 58, in single_nb_execution
    executenb(
  File "D:\ProgramData\anaconda3\Lib\site-packages\nbclient\client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\ProgramData\anaconda3\Lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\ProgramData\anaconda3\Lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\ProgramData\anaconda3\Lib\asyncio\base_events.py", line 653, in run_until_complete
    return future.result()
           ^^^^^^^^^^^^^^^
  File "D:\ProgramData\anaconda3\Lib\site-packages\nbclient\client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "D:\ProgramData\anaconda3\Lib\site-packages\nbclient\client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "D:\ProgramData\anaconda3\Lib\site-packages\nbclient\client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
``filter(fun, iter)`` å¯¹å¯è¿­ä»£å¯¹è±¡ iter ä¸­çš„æ¯ä¸€ä¸ªå…ƒç´ åº”ç”¨åˆ¤æ–­å‡½æ•° fun è¿‡æ»¤ï¼Œå¹¶è¿”å›ä¸€ä¸ª filter ç±»å‹çš„å¯è¿­ä»£å¯¹è±¡ã€‚
------------------

[1;36m  Cell [1;32mIn[27], line 1[1;36m[0m
[1;33m    ``filter(fun, iter)`` å¯¹å¯è¿­ä»£å¯¹è±¡ iter ä¸­çš„æ¯ä¸€ä¸ªå…ƒç´ åº”ç”¨åˆ¤æ–­å‡½æ•° fun è¿‡æ»¤ï¼Œå¹¶è¿”å›ä¸€ä¸ª filter ç±»å‹çš„å¯è¿­ä»£å¯¹è±¡ã€‚[0m
[1;37m                                                          ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid character 'ï¼Œ' (U+FF0C)

SyntaxError: invalid character 'ï¼Œ' (U+FF0C) (3480304145.py, line 1)

